Implementaçao do template nas paginas html

--- a/templates/produtos_faltando.html
+++ b/templates/produtos_faltando.html
@@ -1,13 +1,8 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Produtos em falta</title>
-</head>
-<body>
-    <table>
+{% extends "template.html" %}
+{% block title %}MUDAR{% endblock %}
+{% block h1 %}MUDAR{% endblock %}
+{% block conteudo%}
+<table>
         <caption>Produtos</caption>
         <tr>
             <td>ID</td>
@@ -27,6 +22,5 @@
             <td>{{ produto.quantidade_ideal }}</td>
         </tr>
         {% endfor %}
-    </table
-</body>
-</html>
+</table>
+{% endblock %}
