--- a/templates/index.html
+++ b/templates/index.html
@@ -1,33 +1,7 @@
-<!DOCTYPE html>
-<html lang="pt-br">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>index</title>
-</head>
+{% extends "template.html" %}
+{% block title %}Olá{% endblock %}
+{% block h1 %}Controle de Estoque{% endblock %}
+{% block conteudo%}
 
-<body>
-    <h1>Controle de Estoque</h1>
-
-
-    <a href="{{ url_for('produtos') }}">
-        <h2>Produtos</h2>
-    </a>
-
-    <a href="{{ url_for('novo_produto', erro_nome='nao') }}">
-        <h2>Novo Produto</h2>
-    </a>
-
-    <a href="{{ url_for('produtos_faltando') }}">
-        <h2>Produtos em falta</h2>
-    </a>
-
-    <a href="{{ url_for('produtos_faltando') }}">
-        <h2>Produtos em falta</h2>
-    </a>
-
-</body>
-
-</html>
+{% endblock %}
