Atualizaçao com algumas mudanças nos templates e rota de venda ainda nao funcional

--- a/templates/template.html
+++ b/templates/template.html
@@ -20,6 +20,7 @@
                 <li><a href="{{ url_for('produtos') }}">Produtos</a></li>
                 <li><a href="{{ url_for('novo_produto', erro_nome='nao')}}">Adicionar produto</a></li>
                 <li><a href="{{ url_for('produtos_faltando')}}">Produtos em falta</a></li>
+                <li><a href="{{ url_for('venda')}}">Venda de produtos</a></li>
             </div>
         </ul>
     </nav>
