--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,6 @@
 
 {% extends "template.html" %}
-{% block title %}Olá{% endblock %}
+{% block title %}Controle de Estoque{% endblock %}
 {% block h1 %}Controle de Estoque{% endblock %}
 {% block conteudo%}
 
