--- a/templates/novo_produto.html
+++ b/templates/novo_produto.html
@@ -1,34 +1,33 @@
 {% extends "template.html" %}
-{% block title %}MUDAR{% endblock %}
-{% block h1 %}MUDAR{% endblock %}
+{% block title %}Novo Produto{% endblock %}
+{% block h1 %}Criar um novo produto{% endblock %}
 {% block conteudo%}
-<form name="form" action="{{ url_for('criar_produto') }}" method="POST" enctype="multipart/form-data">
-    <div>
-        <label for="nome">Nome:</label>
-        <input type="text" required name="nome" id="nome">
-    </div>
-    <br>
-    <div>
-        <label for="valor_compra">Valor de Compra:</label>
-        <input type="number" required name="valor_compra" id="valor_compra">
-    </div>
-    <br>
-    <div>
-        <label for="valor_venda">Valor de Venda:</label>
-        <input type="number" required name="valor_venda" id="valor_venda">
-    </div>
-    <br>
-    <div>
-        <label for="quantidade_estoque">Quantidade em Estoque:</label>
-        <input type="number" required name="quantidade_estoque" id="quantidade_estoque">
-    </div>
-    <br>
-    <div>
-        <label for="quantidade_ideal">Quantidade Ideal:</label>
-        <input type="number" required name="quantidade_ideal" id="quantidade_ideal">
-    </div>
-    <div>
-        <input name="confirmar" disabled="disabled" type="submit">
-    </div>
-</form>
+<div class="container" style="border-style: solid; border-color: #dee2e6; margin-top: -0.3%; padding-top: 1%; padding-bottom: 1%;">
+
+    <form name="form" action="{{ url_for('criar_produto') }}" method="POST" enctype="multipart/form-data">
+        <div class="form-group">
+            <label for="nome">Nome do Produto</label>
+            <input type="text" required class="form-control" name="nome" id="nome">
+        </div>
+        <div class="form-group">
+            <label for="valor_compra">Valor de compra do Produto</label>
+            <input type="number" required class="form-control" name="valor_compra" id="valor_compra">
+        </div>
+        <div class="form-group">
+            <label for="valor_venda">Valor de venda do Produto</label>
+            <input type="number" required class="form-control" name="valor_venda" id="valor_venda">
+        </div>
+        <div class="form-group">
+            <label for="quantidade_estoque">Quantidade do produto em estoque</label>
+            <input type="number" required class="form-control" name="quantidade_estoque" id="quantidade_estoque">
+        </div>
+        <div class="form-group">
+            <label for="quantidade_minima">Quantidade mínima para se ter do produto</label>
+            <input type="number" required class="form-control" name="quantidade_minima" id="quantidade_minima">
+        </div>
+        <div class="mx-auto" style="width: 200px;">
+            <button type="submit" class="btn btn-primary btn-lg">Confirmar</button>
+        </div>
+    </form>
+</div>
 {% endblock %}
